fix: add font swap to ensure text remains visible during webfont load

--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -10,6 +10,7 @@
        url('../fonts/poppins-v5-latin-regular.woff') format('woff'), /* Modern Browsers */
        url('../fonts/poppins-v5-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/poppins-v5-latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* poppins-italic - latin */
 @font-face {
@@ -23,6 +24,7 @@
        url('../fonts/poppins-v5-latin-italic.woff') format('woff'), /* Modern Browsers */
        url('../fonts/poppins-v5-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/poppins-v5-latin-italic.svg#Poppins') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* poppins-600 - latin */
 @font-face {
@@ -36,6 +38,7 @@
        url('../fonts/poppins-v5-latin-600.woff') format('woff'), /* Modern Browsers */
        url('../fonts/poppins-v5-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/poppins-v5-latin-600.svg#Poppins') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* poppins-600italic - latin */
 @font-face {
@@ -49,6 +52,7 @@
        url('../fonts/poppins-v5-latin-600italic.woff') format('woff'), /* Modern Browsers */
        url('../fonts/poppins-v5-latin-600italic.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/poppins-v5-latin-600italic.svg#Poppins') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* poppins-700 - latin */
 @font-face {
@@ -62,6 +66,7 @@
        url('../fonts/poppins-v5-latin-700.woff') format('woff'), /* Modern Browsers */
        url('../fonts/poppins-v5-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/poppins-v5-latin-700.svg#Poppins') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* poppins-700italic - latin */
 @font-face {
@@ -75,6 +80,7 @@
        url('../fonts/poppins-v5-latin-700italic.woff') format('woff'), /* Modern Browsers */
        url('../fonts/poppins-v5-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/poppins-v5-latin-700italic.svg#Poppins') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* poppins-800 - latin */
 @font-face {
@@ -88,6 +94,7 @@
        url('../fonts/poppins-v5-latin-800.woff') format('woff'), /* Modern Browsers */
        url('../fonts/poppins-v5-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/poppins-v5-latin-800.svg#Poppins') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* poppins-800italic - latin */
 @font-face {
@@ -101,6 +108,7 @@
        url('../fonts/poppins-v5-latin-800italic.woff') format('woff'), /* Modern Browsers */
        url('../fonts/poppins-v5-latin-800italic.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/poppins-v5-latin-800italic.svg#Poppins') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* dm-sans-regular - latin */
@@ -115,6 +123,7 @@
        url('../fonts/dm-sans-v1-latin-regular.woff') format('woff'), /* Modern Browsers */
        url('../fonts/dm-sans-v1-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/dm-sans-v1-latin-regular.svg#DMSans') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* dm-sans-italic - latin */
 @font-face {
@@ -128,6 +137,7 @@
        url('../fonts/dm-sans-v1-latin-italic.woff') format('woff'), /* Modern Browsers */
        url('../fonts/dm-sans-v1-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/dm-sans-v1-latin-italic.svg#DMSans') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* dm-sans-500 - latin */
 @font-face {
@@ -141,6 +151,7 @@
        url('../fonts/dm-sans-v1-latin-500.woff') format('woff'), /* Modern Browsers */
        url('../fonts/dm-sans-v1-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/dm-sans-v1-latin-500.svg#DMSans') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* dm-sans-500italic - latin */
 @font-face {
@@ -154,6 +165,7 @@
        url('../fonts/dm-sans-v1-latin-500italic.woff') format('woff'), /* Modern Browsers */
        url('../fonts/dm-sans-v1-latin-500italic.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/dm-sans-v1-latin-500italic.svg#DMSans') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* dm-sans-700 - latin */
 @font-face {
@@ -167,6 +179,7 @@
        url('../fonts/dm-sans-v1-latin-700.woff') format('woff'), /* Modern Browsers */
        url('../fonts/dm-sans-v1-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/dm-sans-v1-latin-700.svg#DMSans') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* dm-sans-700italic - latin */
 @font-face {
@@ -180,4 +193,5 @@
        url('../fonts/dm-sans-v1-latin-700italic.woff') format('woff'), /* Modern Browsers */
        url('../fonts/dm-sans-v1-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/dm-sans-v1-latin-700italic.svg#DMSans') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
